# dotfiles

./: Flatpak.txt  MyEnvOnLinux  MyEnvOnLinux.md  README.md  coc-settings.json  i3blocks.conf  init.vim  listrpm.txt  pkgs_a.lst  setup.sh
VS/: Exported-2024-11-23.vssettings
VS/natvis/: BinaryTree.natvis  Boost.natvis  BoostContainers.natvis  CircularBuffer.natvis  Containers.natvis  GraphNode.natvis  HashMap.natvis  LinkedList.natvis  Matrix.natvis  Mutex.natvis  Nlohmann.natvis  Optional.natvis  PocoAutoPtr.natvis  PocoDateTime.natvis  PocoDynVar.natvis  PocoJsonArray.natvis  PocoJsonObject.natvis  PocoNullable.natvis  PocoURI.natvis  QColor.natvis  QList.natvis  QMap.natvis  QRect.natvis  QString.natvis  QVariant.natvis  QVector.natvis  Queue.natvis  SharedPtr.natvis  VkResult.natvis  vkClearValue.natvis  vkCommandBuffer.natvis  vkExtend.natvis  vkMemoryRequirements.natvis  vkPhysicalDeviceProperties.natvis  vkPipelines.natvis
VS/vssnippets/: Coroutines.snippet  EqualConcept.snippet  Format.snippet  Functions.snippet  Hello.snippet  JThread.snippet  Lambda.snippet  Pi.snippet  Ranges.snippet  SameConcept.snippet  TemplateClassWithConcept.snippet  TemplateClassWithConceptAndFunction.snippet.snippet  TemplateFunc.snippet  TemplatedLambda.snippet  VariadicTemplFunc.snippet
VSsnippets/: Format.snippet  JThread.snippet  Lambda.snippet  TemplateClassWithConcept.snippet  TemplateClassWithConceptAndFunction.snippet.snippet  TemplatedLambda.snippet  concept.snippet
alacritty/: alacritty.yml
aliases/: cargo.txt  clang_debug.txt  clang_run.txt  clear.txt  conan.txt  count.txt  df_to_duf.txt  docker.txt  dotnet.txt  echo.txt  git.txt  grep_hist.txt  htop.txt  k8saliases.txt  ls_to_exa.txt  mounted_devices.txt  neofetch.txt  npm.txt  pacman.txt  pip&python.txt  pip.txt  proc.txt  rfv.txt  rps_test.txt  sad_find.txt  tmux.txt  update.txt
anvim/: readme.md
anvim/lua/astronvim/: mappings.lua  options.lua
anvim/lua/plugins/: alpha.lua  core.lua  lsp.lua
anvim/lua/plugins/configs/: glslls.lua
anvim/lua/server_configurations/: glslls.lua
anvim/lua/user/: init.lua
astronvim/: Readme.md
astronvim/lua/astronvim/: mappings.lua
astronvim/lua/astronvim/icons/: nerd_font.lua
astronvim/lua/plugins/: core.lua  lsp.lua  ui.lua
astronvim/lua/plugins/configs/: lspconfig.lua
bash/: .bashrc
cpp_boilerpate/: .clang-format  CMakeLists.txt  Structure.md  vcpkg.json
cpp_boilerpate/docs/: CMakeLists.txt  Doxyfile.in  using_doxygen.md
cpp_conan_boilerplate/: .clang-format  .gitignore  CMakeLists.txt  Structure.md  conanfile.txt  path.txt  run.sh
cpp_conan_boilerplate/lib/: CMakeLists.txt
cpp_qt_boilerplate/: CMakeLists.txt  README.md  conanfile.txt  run.sh
cpp_qt_boilerplate/src/: CMakeLists.txt  main.cpp  main.qml
cppshippets/: gtest.cpp
dockerfiles/: Dockerfile.archlinux  Dockerfile.debian  Dockerfile.dotnet  Dockerfile.drogon  Dockerfile.rust
git/: .gitconfig  .gitignore
i3/: config  i3blocks.conf
kde/: env.txt
kitty/: kitty.conf
luanvim/: init.lua
luanvim/lua/plugins/configs/: alpha.lua  cmake-tools.lua  lspconfig.lua
mutt/: .muttrc
natvis/: BinaryTree.natvis  Boost.natvis  BoostContainers.natvis  CircularBuffer.natvis  Containers.natvis  DynamicArray.natvis  GraphNode.natvis  HashMap.natvis  LinkedList.natvis  Matrix.natvis  Mutex.natvis  Nlohmann.natvis  Optional.natvis  PocoAutoPtr.natvis  PocoDateTime.natvis  PocoDynVar.natvis  PocoJsonArray.natvis  PocoJsonObject.natvis  PocoNullable.natvis  PocoURI.natvis  QColor.natvis  QList.natvis  QMap.natvis  QRect.natvis  QString.natvis  QVariant.natvis  QVector.natvis  Queue.natvis  SharedPtr.natvis  VkResult.natvis  vkClearValue.natvis  vkCommandBuffer.natvis  vkExtend.natvis  vkMemoryRequirements.natvis  vkPhysicalDeviceProperties.natvis  vkPipelines.natvis
nvim/: coc-settings.json  init.vim  lang-servers.txt
powerShell/: battery.ps1  installedsoftware.ps1  ram.ps1
ranger/: devicons.py  rc.conf
rtorrent/: rtorrent.rc
scripts/: Makefile  clang-format.sh  dnf.sh  format.sh  fzf-git.zsh  image_to_pdf.py  mysqlbackup.sh  pgbackup.sh  rfc.zsh  rfv.zsh  setup.sh  url_short.py  weater.sh
scripts/lin/: Makefile  archives.sh  jpg2png.py  pdf2audio.py  rfv.zsh  sysmon.sh
scripts/win/: jb.bat
scripts/win/powerShell/: archives.ps1  calendar.ps1  dir2zip.ps1  explorer.ps1  md2html.ps1  profile.ps1  rfv.ps1  top_ram.ps1  weather.ps1
tmux/: .tmux.conf
vscode/: BasicC++.code-profile  C#.code-profile  C++.code-profile  C-C++.code-profile  Golang.code-profile  Java.code-profile  ML.code-profile  NodeJS.code-profile  Python.code-profile  Rust.code-profile
vssnippets/: Concept.snippet  Coroutines.snippet  EqualConcept.snippet  Functions.snippet  Hello.snippet  Pi.snippet  Ranges.snippet  SameConcept.snippet  TemplateClassWithConcept.snippet  TemplateFunc.snippet  VariadicTemplFunc.snippet
wezterm/: wezterm.lua
zsh/: .zshrc
